2008-01-24  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/anjuta-debug-manager.glade,
	plugins/debug-manager/start.c:
	Fix #511049: Change UI of add source directories dialog

2008-01-24  Naba Kumar  <naba@gnome.org>

	* plugins/editor/text-editor-iterable.c: (iiter_get_length):
	* plugins/editor/text_editor.c: (itext_editor_get_text_all),
	(itext_editor_get_text), (itext_editor_get_length): Fixes implementations
	of ianjuta_editor_get_length(), ianjuta_iterable_get_length() and
	ianjuta_editor_get_text_all(). Current Search-replace and symbol-db
	should work now.

2008-01-24  Johannes Schmid <jhs@gnome.org>

	Patch from: Luca Ferretti <ella.uca@libero.it>:

	* plugins/document-manager/anjuta-docman.c:
	(anjuta_docman_page_init), (anjuta_docman_class_init):
	* plugins/message-view/anjuta-msgman.c: (anjuta_msgman_page_new):
	
	Fix #511757 – Close icon in tabs cut off (Patch was only for
	document-manager, also adapted it for message-manager)

2008-01-24  Johannes Schmid <jhs@gnome.org>

	* plugins/Makefile.am:
	* plugins/sourceview/anjuta-document.c:
	* plugins/sourceview/anjuta-marshal.list:
	* plugins/sourceview/anjuta-view.c: (anjuta_view_class_init),
	(anjuta_view_key_press_event):
	* plugins/sourceview/sourceview-cell.c: (icell_iface_init),
	(iiter_next), (iiter_previous), (iiter_last), (iiter_compare),
	(iiter_diff), (iiter_iface_init):
	* plugins/sourceview/sourceview.c: (on_document_char_added),
	(ieditor_goto_position), (ieditor_get_text),
	(ieditor_get_text_all), (ieditor_get_position), (ieditor_insert),
	(ieditor_erase), (ieditor_get_line_from_position),
	(ieditor_get_line_begin_position), (ieditor_get_line_end_position),
	(ieditor_get_position_from_offset), (ieditor_get_start_position),
	(ieditor_get_end_position), (ieditor_goto_start),
	(ieditor_goto_end), (ieditor_iface_init), (iconvert_to_upper),
	(iconvert_to_lower), (iindic_set), (iassist_suggest),
	(iassist_show_tips):
	